# JVGS

./: AUTHORS  CMakeLists.txt  Doxyfile  README  README.markdown  main.lua  poems
resources/: bull.lua  bullet.lua  bullet.xml  camera.xml  common-enemy.lua  common.lua  heart.lua  jlib.lua  jumper.lua  level.xml  minimalist.lua  player.lua  spikes.lua  sprite.xml
resources/bullet/: bullet.lua  bullet.xml
resources/clock/: obtain-clock.lua  obtain-clock.xml
resources/common-scripts/: invincible-enemy.lua
resources/effects/: effects.lua
resources/grenade/: grenade.xml  script.lua
resources/hat/: hat.lua  hat.xml  obtain-hat.lua
resources/hedgehog/: hedgehog.lua  hedgehog.xml
resources/helidude/: helidude.xml
resources/knife/: knife.lua  knife.xml  obtain-knife.lua  obtain-knife.xml  script.lua
resources/level-01/: heart.lua  level-01.xml  level.xml  tutorial-01.lua  tutorial-02.lua  tutorial-03.lua  tutorial-04.lua
resources/level-02/: level-02.xml  level.xml  star.lua
resources/level-03/: crown.lua  crown.xml  level-03.xml  level.xml  star.lua  teleport-to-start.lua
resources/level-04/: level-04.xml  level.xml  spiral.lua
resources/level-05/: level-05.xml  level.xml  triforce.lua
resources/level-06/: crown.lua  crown.xml  level-06.xml  level.xml  star.lua
resources/level-07/: level.xml
resources/level-city/: cloud.lua  level.xml
resources/level-contact/: girl.lua  level.xml
resources/level-credits/: level.xml
resources/level-end/: end.lua  girl.xml  level.xml
resources/level-four/: crown.lua  level.xml
resources/level-intro/: tutorial-01.lua
resources/level-knife/: level.xml  star.lua
resources/level-main-menu/: main-menu.xml
resources/level-nostalgia/: level.xml  spiral.lua
resources/level-planet/: level.xml  star.lua
resources/level-run/: level.xml  triforce.lua
resources/level-sea/: level.xml  star.lua
resources/levels/: level-01-end.xml  level-01.xml  menu-play.lua  menu-quit.lua  menu.xml
resources/main-menu/: main-menu.xml  play.lua  quit.lua
resources/modules/: common.lua  effects.lua  events.lua  jlib.lua
resources/mouse/: mouse.lua  mouse.xml
resources/pacman/: pacman.xml
resources/player/: player.lua  player.xml  script.lua
resources/saurian/: saurian.xml
resources/spider/: spider.lua  spider.xml
src/: CMakeLists.txt  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt
src/bind/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.h  jvgs.i  jvgslua.cpp  jvgslua.i
src/core/: CMakeLists.txt  DataManager.cpp  DataManager.h  LogManager.cpp  LogManager.h  PersistenceManager.cpp  PersistenceManager.h  PropertyMap.cpp  PropertyMap.h  ScriptManager.cpp  ScriptManager.h  TimeManager.cpp  TimeManager.h  View.cpp  View.h  XMLLoadable.cpp  XMLLoadable.h
src/effect/: CMakeLists.txt  ColorEffect.cpp  ColorEffect.h  EffectManager.cpp  EffectManager.h  FadeEffect.cpp  FadeEffect.h  InvertEffect.cpp  InvertEffect.h  LifeEffect.cpp  LifeEffect.h  Particle.cpp  Particle.h  TextEffect.cpp  TextEffect.h  TimeEffect.cpp  TimeEffect.h
src/font/: CMakeLists.txt  Font.cpp  Font.h  FontManager.cpp  FontManager.h
src/game/: AbstractCamera.cpp  AbstractCamera.h  AbstractEntity.cpp  AbstractEntity.h  Affector.cpp  Affector.h  AffectorFactory.h  Animation.cpp  Animation.h  BullController.cpp  BullController.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h  CollisionDestroyPositioner.cpp  CollisionDestroyPositioner.h  CollisionResponder.cpp  CollisionResponder.h  CollisionResponseAffector.cpp  CollisionResponseAffector.h  CollisionResponsePositioner.cpp  CollisionResponsePositioner.h  Controller.cpp  Controller.h  ControllerFactory.h  DefaultInputController.cpp  DefaultInputController.h  Entity.cpp  Entity.h  EntityEvent.cpp  EntityEvent.h  EntityEventManager.cpp  EntityEventManager.h  FlyStraightController.cpp  FlyStraightController.h  FollowCamera.cpp  FollowCamera.h  GravityAffector.cpp  (+26 more)
src/input/: CMakeLists.txt  InputConfiguration.cpp  InputConfiguration.h  InputManager.cpp  InputManager.h  Key.h  KeyListener.cpp  KeyListener.h
src/math/: AffineTransformationMatrix.cpp  AffineTransformationMatrix.h  BoundedObject.cpp  BoundedObject.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  CubicCurve.cpp  CubicCurve.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  EllipticalArc.cpp  EllipticalArc.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  MathManager.cpp  MathManager.h  Matrix.cpp  Matrix.h  Noise.cpp  Noise.h  PathSegment.cpp  PathSegment.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  QuadraticCurve.cpp  QuadraticCurve.h  SegmentQuadTree.cpp  SegmentQuadTree.h  SegmentQuadTreeNode.cpp  SegmentQuadTreeNode.h  Vector2D.cpp  (+1 more)
src/sketch/: APathCommandParser.cpp  APathCommandParser.h  CMakeLists.txt  CPathCommandParser.cpp  CPathCommandParser.h  CPathSegmentRenderer.cpp  CPathSegmentRenderer.h  Group.cpp  Group.h  GroupParser.cpp  GroupParser.h  GroupRenderer.cpp  GroupRenderer.h  HPathSegmentRenderer.cpp  HPathSegmentRenderer.h  LPathCommandParser.cpp  LPathCommandParser.h  LPathSegmentRenderer.cpp  LPathSegmentRenderer.h  MPathCommandParser.cpp  MPathCommandParser.h  MPathSegmentRenderer.cpp  MPathSegmentRenderer.h  MatrixTransformCommand.cpp  MatrixTransformCommand.h  Parser.cpp  Parser.h  Path.cpp  Path.h  PathCommandParser.cpp  PathCommandParser.h  PathComponent.cpp  PathComponent.h  PathDataParser.cpp  PathDataParser.h  PathParser.cpp  PathParser.h  PathRenderer.cpp  PathRenderer.h  PathSegment.cpp  (+63 more)
src/test/: .performanceTest.cpp.swp  CMakeLists.txt  collisionTest.cpp  fontTest.cpp  levelTest.cpp  mathTest.cpp  matrixTest.cpp  pathTest.cpp  performanceTest.cpp  sketchTest.cpp
src/tinyxml/: CMakeLists.txt  tinyxml.h
src/video/: CMakeLists.txt  Color.cpp  Color.h  DataRenderer.cpp  DataRenderer.h  FPSLogger.cpp  FPSLogger.h  ListManager.cpp  ListManager.h  Renderer.cpp  Renderer.h  SketchyRenderer.cpp  SketchyRenderer.h  VideoManager.cpp  VideoManager.h
util/: template.sh  translate.lua  viewer.lua
(+7 files in other folders)
