SET( CMAKE_CXX_FLAGS "-DTIXML_USE_STL -W -ggdb" )

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${LUA_INCLUDE_DIR}
)

ADD_SUBDIRECTORY( input )
ADD_SUBDIRECTORY( core )
ADD_SUBDIRECTORY( game )
ADD_SUBDIRECTORY( math )
ADD_SUBDIRECTORY( tinyxml )
ADD_SUBDIRECTORY( video )
ADD_SUBDIRECTORY( sketch )
ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( bind )
