SET( CMAKE_CXX_FLAGS "-DTIXML_USE_STL -W -ggdb" )

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${LUA_INCLUDE_DIR}
    ${FREETYPE_INCLUDE_DIRS}
    ${SDLMIXER_INCLUDE_DIR}
)

ADD_SUBDIRECTORY( input )
ADD_SUBDIRECTORY( core )
ADD_SUBDIRECTORY( game )
ADD_SUBDIRECTORY( math )
ADD_SUBDIRECTORY( tinyxml )
ADD_SUBDIRECTORY( video )
ADD_SUBDIRECTORY( audio )
ADD_SUBDIRECTORY( sketch )
ADD_SUBDIRECTORY( font )
ADD_SUBDIRECTORY( effect )
ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( bind )

ADD_EXECUTABLE(
    jvgs main.cpp
)

TARGET_LINK_LIBRARIES(
    jvgs bind input
)
