ADD_LIBRARY( 
    math SHARED 
    AffineTransformationMatrix.cpp
    BoundingBox.cpp
    CubicCurve.cpp
    Curve.cpp
    Line.cpp
    LineSegment.cpp
    MathManager.cpp
    Matrix.cpp
    Noise.cpp
    PathSegment.cpp
    QuadraticCurve.cpp
    SegmentQuadTree.cpp
    SegmentQuadTreeNode.cpp
    Vector2D.cpp
)
