ADD_LIBRARY( 
    math SHARED 
    AffineTransformationMatrix.cpp
    BoundedObject.cpp
    BoundingBox.cpp
    CubicCurve.cpp
    Curve.cpp
    Line.cpp
    LineSegment.cpp
    MathManager.cpp
    Matrix.cpp
    Noise.cpp
    PathSegment.cpp
    QuadraticCurve.cpp
    QuadTree.cpp
    QuadTreeNode.cpp
    Vector2D.cpp
)
