ADD_LIBRARY( 
    sketch SHARED 
    Group.cpp
    GroupParser.cpp
    LPathCommandParser.cpp
    MatrixTransformCommand.cpp
    MPathCommandParser.cpp
    Path.cpp
    PathComponent.cpp
    PathCommandParser.cpp
    PathDataParser.cpp
    PathParser.cpp
    Parser.cpp
    RotateTransformCommand.cpp
    ScaleTransformCommand.cpp
    Sketch.cpp
    SketchElement.cpp
    SketchElementParser.cpp
    SketchElementRenderer.cpp
    SkewXTransformCommand.cpp
    SkewYTransformCommand.cpp
    TransformParser.cpp
    TransformCommand.cpp
    TranslateTransformCommand.cpp
    TextParser.cpp
)

TARGET_LINK_LIBRARIES(
    sketch
    tinyxml
    core
    video
)
