ADD_LIBRARY( 
    sketch STATIC 
    CPathCommandParser.cpp
    Group.cpp
    GroupParser.cpp
    LPathCommandParser.cpp
    MatrixTransformCommand.cpp
    MPathCommandParser.cpp
    Path.cpp
    PathComponent.cpp
    PathCommandParser.cpp
    PathDataParser.cpp
    PathParser.cpp
    Parser.cpp
    QPathCommandParser.cpp
    RotateTransformCommand.cpp
    ScaleTransformCommand.cpp
    SPathCommandParser.cpp
    Sketch.cpp
    SketchElement.cpp
    SketchElementParser.cpp
    SketchElementRenderer.cpp
    SkewXTransformCommand.cpp
    SkewYTransformCommand.cpp
    TPathCommandParser.cpp
    TransformParser.cpp
    TransformCommand.cpp
    TranslateTransformCommand.cpp
    TextParser.cpp
    ZPathCommandParser.cpp
)

TARGET_LINK_LIBRARIES(
    sketch
    tinyxml
    core
    video
)
